--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
+    "lightgallery": "^2.7.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-modal-image": "^2.6.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
