--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@mui/material": "^5.16.5",
     "firebase": "^10.12.5",
     "lightgallery": "^2.7.2",
-    "moment": "^2.30.1",
+    "luxon": "^3.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "uuid": "^10.0.0"
