--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "firebase": "^10.12.5",
-    "lightgallery": "^2.7.2",
     "luxon": "^3.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-photoswipe-gallery": "^3.0.2",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
