--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "luxon": "^3.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.0.8",
     "react-photoswipe-gallery": "^3.0.2",
     "uuid": "^10.0.0"
   },
